@@ -7,8 +7,8 @@
     "description": "Modpack dedicated to vanilla gameplay with quality-of-life improvements.",
     "factorio_version": "1.1",
     "dependencies": [
-        "? base >= 1.1.61",
-        "AdvancedArtilleryRemotesContinued >= 2.0.0",
+        "? base >= 1.1.107",
+        "AdvancedArtilleryRemotesContinued >= 4.0.3",
         "automatic-station-painter >= 1.0.5",
         "Automatic_Train_Painter >= 1.1.4",
         "BetterAlertArrows >= 1.0.0",
